--- a/uiadministrateur.ui
+++ b/uiadministrateur.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>UIAdministrateur</class>
  <widget class="QMainWindow" name="UIAdministrateur">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -23,7 +26,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Interface administrateur</string>
+   <string>Interface Administrateur</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QWidget" name="formLayoutWidget">
@@ -32,7 +35,7 @@
       <x>10</x>
       <y>50</y>
       <width>241</width>
-      <height>131</height>
+      <height>140</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="formLayout">
@@ -241,7 +244,7 @@
      <rect>
       <x>9</x>
       <y>10</y>
-      <width>581</width>
+      <width>609</width>
       <height>31</height>
      </rect>
     </property>
@@ -338,7 +341,7 @@
      <x>0</x>
      <y>0</y>
      <width>596</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
