--- a/uiauthentication.ui
+++ b/uiauthentication.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>650</width>
-    <height>754</height>
+    <width>821</width>
+    <height>615</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>821</width>
+    <height>615</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>UIauthentication</string>
@@ -17,105 +23,61 @@
    <widget class="QWidget" name="widget" native="true">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>10</y>
-      <width>621</width>
-      <height>681</height>
+      <width>791</width>
+      <height>541</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <weight>75</weight>
-      <bold>true</bold>
-      <strikeout>false</strikeout>
-     </font>
-    </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(85, 85, 127);
-border-radius: 20px;</string>
+     <string notr="true">background-color:qlineargradient(spread:pad, x1:0.367, y1:0.0267273, x2:1, y2:0.01, stop:0 rgba(114, 134, 164, 255), stop:1 rgba(255, 255, 255, 255));</string>
     </property>
-    <widget class="QLabel" name="labelLogin">
+    <widget class="Line" name="line">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>70</y>
-       <width>281</width>
-       <height>71</height>
+       <x>380</x>
+       <y>30</y>
+       <width>20</width>
+       <height>471</height>
       </rect>
      </property>
-     <property name="font">
-      <font>
-       <family>Lucida Calligraphy</family>
-       <pointsize>26</pointsize>
-       <weight>50</weight>
-       <italic>false</italic>
-       <bold>false</bold>
-       <underline>false</underline>
-       <strikeout>false</strikeout>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
-     </property>
-     <property name="text">
-      <string>Login Form</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_login">
-     <property name="geometry">
-      <rect>
-       <x>140</x>
-       <y>460</y>
-       <width>131</width>
-       <height>51</height>
-      </rect>
-     </property>
-     <property name="mouseTracking">
-      <bool>false</bool>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(67, 67, 100);
-background-color: rgb(113, 111, 172);
-border-radius: 10px;
-color: rgb(223, 223, 223);</string>
-     </property>
-     <property name="text">
-      <string>Sign In</string>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_username">
      <property name="geometry">
       <rect>
-       <x>140</x>
-       <y>290</y>
-       <width>321</width>
+       <x>460</x>
+       <y>170</y>
+       <width>261</width>
        <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(81, 81, 121);
-border-radius: 10px;
-border-bottom: 1px solid #ffffff;
-color: rgb(223, 223, 223);</string>
+      <string notr="true">border-radius: 10px;
+background-color: rgba(255, 255, 255, .0);
+border-bottom: 2px solid rgb(49, 49, 49);
+color: rgb(49, 49, 49);</string>
      </property>
      <property name="placeholderText">
-      <string>USERNAME</string>
+      <string>NOM UTILISATEUR</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_password">
      <property name="geometry">
       <rect>
-       <x>140</x>
-       <y>380</y>
-       <width>321</width>
+       <x>460</x>
+       <y>250</y>
+       <width>261</width>
        <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(81, 81, 121);
-border-radius: 10px;
-border-bottom: 1px solid #ffffff;
-color: rgb(223, 223, 223);</string>
+      <string notr="true">border-radius: 10px;
+background-color: rgba(255, 255, 255, .0);
+border-bottom: 2px solid rgb(49, 49, 49);
+color: rgb(49, 49, 49);</string>
      </property>
      <property name="echoMode">
       <enum>QLineEdit::Password</enum>
@@ -124,64 +86,71 @@ color: rgb(223, 223, 223);</string>
       <bool>false</bool>
      </property>
      <property name="placeholderText">
-      <string>PASSWORD</string>
+      <string>MOT DE PASSE</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_cancel">
+    <widget class="QPushButton" name="pushButton_login">
      <property name="geometry">
       <rect>
-       <x>140</x>
-       <y>530</y>
-       <width>321</width>
-       <height>51</height>
+       <x>460</x>
+       <y>330</y>
+       <width>261</width>
+       <height>41</height>
       </rect>
-     </property>
-     <property name="font">
-      <font>
-       <weight>75</weight>
-       <bold>true</bold>
-       <strikeout>false</strikeout>
-      </font>
      </property>
      <property name="mouseTracking">
       <bool>false</bool>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(67, 67, 100);
-background-color: rgb(173, 52, 36);
+      <string notr="true">background-color: rgb(103, 117, 141);
 border-radius: 10px;
 color: rgb(223, 223, 223);</string>
      </property>
      <property name="text">
-      <string>Exit</string>
+      <string>Authentifier</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_signIn">
+    <widget class="QTextBrowser" name="textBrowser">
      <property name="geometry">
       <rect>
-       <x>320</x>
-       <y>460</y>
-       <width>141</width>
-       <height>51</height>
+       <x>60</x>
+       <y>320</y>
+       <width>301</width>
+       <height>121</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <weight>75</weight>
-       <bold>true</bold>
-       <strikeout>false</strikeout>
+       <family>Niagara Solid</family>
+       <pointsize>18</pointsize>
       </font>
      </property>
-     <property name="mouseTracking">
-      <bool>false</bool>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgba(255, 255, 255, .0);</string>
+     </property>
+     <property name="html">
+      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Niagara Solid'; font-size:18pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'MS Shell Dlg 2';&quot;&gt;Système de gestion &lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'MS Shell Dlg 2';&quot;&gt;des notes&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>90</y>
+       <width>241</width>
+       <height>171</height>
+      </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(67, 67, 100);
-border-radius: 10px;
-color: rgb(223, 223, 223);</string>
+      <string notr="true">background-image: url(:/images/images/logo.png);</string>
      </property>
      <property name="text">
-      <string>Sign Up</string>
+      <string/>
      </property>
     </widget>
    </widget>
@@ -191,7 +160,7 @@ color: rgb(223, 223, 223);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>650</width>
+     <width>821</width>
      <height>26</height>
     </rect>
    </property>
