--- a/uimodule.ui
+++ b/uimodule.ui
@@ -13,14 +13,17 @@
   <property name="windowTitle">
    <string>Modules</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>80</y>
-      <width>961</width>
-      <height>41</height>
+      <x>400</x>
+      <y>20</y>
+      <width>581</width>
+      <height>31</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -100,9 +103,9 @@
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>170</y>
-      <width>721</width>
-      <height>341</height>
+      <y>80</y>
+      <width>731</width>
+      <height>431</height>
      </rect>
     </property>
    </widget>
@@ -143,7 +146,7 @@
      <rect>
       <x>250</x>
       <y>529</y>
-      <width>721</width>
+      <width>731</width>
       <height>61</height>
      </rect>
     </property>
