--- a/Ressources.qrc
+++ b/Ressources.qrc
@@ -4,5 +4,6 @@
         <file>images/bg.jpg</file>
         <file>images/bg1.jpg</file>
         <file>images/bg2.jpg</file>
+        <file>images/bg3.jpg</file>
     </qresource>
 </RCC>
