--- a/uiadministrateur.ui
+++ b/uiadministrateur.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1076</width>
+    <width>1072</width>
     <height>696</height>
    </rect>
   </property>
@@ -20,18 +20,21 @@
    <iconset resource="Ressources.qrc">
     <normaloff>:/images/images/bg.jpg</normaloff>:/images/images/bg.jpg</iconset>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QWidget" name="widget" native="true">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>0</x>
       <y>0</y>
       <width>1061</width>
       <height>641</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-image: url(:/images/images/bg.jpg);</string>
+     <string notr="true"/>
     </property>
     <widget class="QTableView" name="tableView">
      <property name="geometry">
@@ -76,10 +79,10 @@ border-color: rgb(112, 132, 162);</string>
     <widget class="QWidget" name="horizontalLayoutWidget_3">
      <property name="geometry">
       <rect>
-       <x>220</x>
+       <x>160</x>
        <y>10</y>
-       <width>531</width>
-       <height>31</height>
+       <width>501</width>
+       <height>41</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -101,6 +104,9 @@ border-color: rgb(112, 132, 162);</string>
       </item>
       <item>
        <widget class="QComboBox" name="comboBoxRechercherPar">
+        <property name="styleSheet">
+         <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
+        </property>
         <property name="currentIndex">
          <number>0</number>
         </property>
@@ -119,7 +125,7 @@ border-color: rgb(112, 132, 162);</string>
       <item>
        <widget class="QPushButton" name="pushButtonRechercher">
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(103, 117, 141);</string>
+         <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
         </property>
         <property name="text">
          <string>Rechercher</string>
@@ -128,78 +134,13 @@ border-color: rgb(112, 132, 162);</string>
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="horizontalLayoutWidget_2">
-     <property name="geometry">
-      <rect>
-       <x>110</x>
-       <y>570</y>
-       <width>791</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <item>
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pushButtonLister">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(103, 117, 141);</string>
-        </property>
-        <property name="text">
-         <string>Lister</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pushButtonSupprimer">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(103, 117, 141);</string>
-        </property>
-        <property name="text">
-         <string>Supprimer</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pushButtonEffacer">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(103, 117, 141);</string>
-        </property>
-        <property name="text">
-         <string>Effacer</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pushButtonExit">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(103, 117, 141);</string>
-        </property>
-        <property name="text">
-         <string>Exit</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
     <widget class="Line" name="line">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>320</x>
        <y>550</y>
-       <width>1041</width>
-       <height>16</height>
+       <width>731</width>
+       <height>20</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -222,7 +163,7 @@ border-color: rgb(112, 132, 162);</string>
       <string>Consulter mon profil ...</string>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(103, 117, 141);</string>
+      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
      </property>
      <property name="text">
       <string>Profil</string>
@@ -232,9 +173,9 @@ border-color: rgb(112, 132, 162);</string>
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>60</y>
+       <y>70</y>
        <width>291</width>
-       <height>471</height>
+       <height>541</height>
       </rect>
      </property>
      <property name="font">
@@ -245,7 +186,10 @@ border-color: rgb(112, 132, 162);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">border-color: rgb(0, 0, 127);</string>
+      <string notr="true">border-radius: 5px;
+background-color: rgba(255, 255, 255, .0);
+border: 2px solid rgb(49, 49, 49);
+color: rgb(49, 49, 49);</string>
      </property>
      <property name="title">
       <string>Compte Utilisateur</string>
@@ -263,7 +207,10 @@ border-color: rgb(112, 132, 162);</string>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true"/>
+       <string notr="true">border-radius: 5px;
+background-color: rgba(255, 255, 255, .0);
+border: 2px solid rgb(49, 49, 49);
+color: rgb(49, 49, 49);</string>
       </property>
       <property name="placeholderText">
        <string>Identifiant</string>
@@ -291,6 +238,12 @@ border-color: rgb(112, 132, 162);</string>
         <height>31</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">border-radius: 5px;
+background-color: rgba(255, 255, 255, .0);
+border-bottom: 2px solid rgb(49, 49, 49);
+color: rgb(49, 49, 49);</string>
+      </property>
       <property name="echoMode">
        <enum>QLineEdit::Password</enum>
       </property>
@@ -306,6 +259,12 @@ border-color: rgb(112, 132, 162);</string>
         <width>231</width>
         <height>31</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border-radius: 5px;
+background-color: rgba(255, 255, 255, .0);
+border: 2px solid rgb(49, 49, 49);
+color: rgb(49, 49, 49);</string>
       </property>
       <property name="echoMode">
        <enum>QLineEdit::Password</enum>
@@ -352,49 +311,6 @@ border-color: rgb(112, 132, 162);</string>
        </property>
       </item>
      </widget>
-     <widget class="QWidget" name="verticalLayoutWidget_3">
-      <property name="geometry">
-       <rect>
-        <x>30</x>
-        <y>370</y>
-        <width>231</width>
-        <height>71</height>
-       </rect>
-      </property>
-      <layout class="QVBoxLayout" name="verticalLayout_5">
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <widget class="QRadioButton" name="radioButtonCreer">
-           <property name="text">
-            <string>Creer</string>
-           </property>
-           <property name="checked">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QRadioButton" name="radioButtonModifier">
-           <property name="text">
-            <string>Modifier</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <widget class="QPushButton" name="pushButtonValider">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(103, 117, 141);</string>
-         </property>
-         <property name="text">
-          <string>Valider</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
      <widget class="QLineEdit" name="lineEditPrenom">
       <property name="geometry">
        <rect>
@@ -421,6 +337,130 @@ border-color: rgb(112, 132, 162);</string>
        <string>Nom</string>
       </property>
      </widget>
+     <widget class="QRadioButton" name="radioButtonModifier">
+      <property name="geometry">
+       <rect>
+        <x>160</x>
+        <y>450</y>
+        <width>101</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Modifier</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="radioButtonCreer">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>450</y>
+        <width>110</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Creer</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButtonValider">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>490</y>
+        <width>231</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
+      </property>
+      <property name="text">
+       <string>Valider</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QPushButton" name="pushButtonLister">
+     <property name="geometry">
+      <rect>
+       <x>330</x>
+       <y>580</y>
+       <width>161</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
+     </property>
+     <property name="text">
+      <string>Lister</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButtonSupprimer">
+     <property name="geometry">
+      <rect>
+       <x>500</x>
+       <y>580</y>
+       <width>191</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
+     </property>
+     <property name="text">
+      <string>Supprimer</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButtonEffacer">
+     <property name="geometry">
+      <rect>
+       <x>700</x>
+       <y>580</y>
+       <width>161</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
+     </property>
+     <property name="text">
+      <string>Effacer</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButtonExit">
+     <property name="geometry">
+      <rect>
+       <x>870</x>
+       <y>580</y>
+       <width>161</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
+     </property>
+     <property name="text">
+      <string>Exit</string>
+     </property>
     </widget>
    </widget>
   </widget>
@@ -429,7 +469,7 @@ border-color: rgb(112, 132, 162);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1076</width>
+     <width>1072</width>
      <height>26</height>
     </rect>
    </property>
