--- a/uiadministrateur.ui
+++ b/uiadministrateur.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1072</width>
+    <width>1265</width>
     <height>696</height>
    </rect>
   </property>
@@ -17,7 +17,7 @@
    <string>Interface Administrateur</string>
   </property>
   <property name="windowIcon">
-   <iconset>
+   <iconset resource="Ressources.qrc">
     <normaloff>:/images/images/bg.jpg</normaloff>:/images/images/bg.jpg</iconset>
   </property>
   <property name="styleSheet">
@@ -29,7 +29,7 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>1061</width>
+      <width>1261</width>
       <height>641</height>
      </rect>
     </property>
@@ -41,7 +41,7 @@
       <rect>
        <x>310</x>
        <y>70</y>
-       <width>741</width>
+       <width>941</width>
        <height>461</height>
       </rect>
      </property>
@@ -49,32 +49,6 @@
       <string notr="true">border: 1px solid;
 border-color: rgb(112, 132, 162);</string>
      </property>
-    </widget>
-    <widget class="QWidget" name="horizontalLayoutWidget_4">
-     <property name="geometry">
-      <rect>
-       <x>830</x>
-       <y>10</y>
-       <width>960</width>
-       <height>32</height>
-      </rect>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_4">
-      <item>
-       <widget class="QLabel" name="labelUtilisateurConnecteTitre">
-        <property name="text">
-         <string>Utilisateur Connecté :</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="labelUtilisateurConnecte">
-        <property name="text">
-         <string>&lt;dynamic&gt;</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
     </widget>
     <widget class="QWidget" name="horizontalLayoutWidget_3">
      <property name="geometry">
@@ -139,7 +113,7 @@ border-color: rgb(112, 132, 162);</string>
       <rect>
        <x>310</x>
        <y>550</y>
-       <width>741</width>
+       <width>941</width>
        <height>20</height>
       </rect>
      </property>
@@ -172,7 +146,7 @@ border-color: rgb(112, 132, 162);</string>
     <widget class="QGroupBox" name="groupBox">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>30</x>
        <y>70</y>
        <width>271</width>
        <height>541</height>
@@ -201,7 +175,7 @@ color: rgb(49, 49, 49);</string>
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>80</y>
+        <y>50</y>
         <width>231</width>
         <height>31</height>
        </rect>
@@ -216,46 +190,11 @@ color: rgb(49, 49, 49);</string>
        <string>Identifiant</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lineEditUsername">
-      <property name="geometry">
-       <rect>
-        <x>20</x>
-        <y>200</y>
-        <width>231</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="placeholderText">
-       <string>Nom d'utilisateur</string>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lineEditPassword">
-      <property name="geometry">
-       <rect>
-        <x>20</x>
-        <y>240</y>
-        <width>231</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">border-radius: 5px;
-background-color: rgba(255, 255, 255, .0);
-border-bottom: 2px solid rgb(49, 49, 49);
-color: rgb(49, 49, 49);</string>
-      </property>
-      <property name="echoMode">
-       <enum>QLineEdit::Password</enum>
-      </property>
-      <property name="placeholderText">
-       <string>Mot de passe</string>
-      </property>
-     </widget>
      <widget class="QLineEdit" name="lineEditConfirmPassword">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>280</y>
+        <y>330</y>
         <width>231</width>
         <height>31</height>
        </rect>
@@ -277,7 +216,7 @@ color: rgb(49, 49, 49);</string>
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>320</y>
+        <y>370</y>
         <width>231</width>
         <height>31</height>
        </rect>
@@ -310,7 +249,7 @@ color: rgb(49, 49, 49);</string>
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>160</y>
+        <y>130</y>
         <width>231</width>
         <height>31</height>
        </rect>
@@ -323,7 +262,7 @@ color: rgb(49, 49, 49);</string>
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>120</y>
+        <y>90</y>
         <width>231</width>
         <height>31</height>
        </rect>
@@ -380,82 +319,163 @@ color: rgb(49, 49, 49);</string>
        <string>Valider</string>
       </property>
      </widget>
+     <widget class="QLineEdit" name="lineEditTelephone">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>210</y>
+        <width>231</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="placeholderText">
+       <string>Téléphone</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEditEmail">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>170</y>
+        <width>231</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="placeholderText">
+       <string>Email</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEditUsername">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>250</y>
+        <width>231</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="placeholderText">
+       <string>Nom d'utilisateur</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEditPassword">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>290</y>
+        <width>231</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border-radius: 5px;
+background-color: rgba(255, 255, 255, .0);
+border-bottom: 2px solid rgb(49, 49, 49);
+color: rgb(49, 49, 49);</string>
+      </property>
+      <property name="echoMode">
+       <enum>QLineEdit::Password</enum>
+      </property>
+      <property name="placeholderText">
+       <string>Mot de passe</string>
+      </property>
+     </widget>
     </widget>
-    <widget class="QPushButton" name="pushButtonLister">
+    <widget class="QWidget" name="horizontalLayoutWidget_4">
      <property name="geometry">
       <rect>
-       <x>330</x>
-       <y>580</y>
-       <width>161</width>
-       <height>31</height>
+       <x>740</x>
+       <y>10</y>
+       <width>311</width>
+       <height>32</height>
       </rect>
      </property>
-     <property name="cursor">
-      <cursorShape>PointingHandCursor</cursorShape>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
-     </property>
-     <property name="text">
-      <string>Lister</string>
-     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_4">
+      <item>
+       <widget class="QLabel" name="labelUtilisateurConnecteTitre">
+        <property name="text">
+         <string>Utilisateur Connecté :</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEditUtilisateurConnecte">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
-    <widget class="QPushButton" name="pushButtonSupprimer">
+    <widget class="QWidget" name="horizontalLayoutWidget">
      <property name="geometry">
       <rect>
-       <x>500</x>
-       <y>580</y>
-       <width>191</width>
-       <height>31</height>
+       <x>314</x>
+       <y>570</y>
+       <width>941</width>
+       <height>61</height>
       </rect>
      </property>
-     <property name="cursor">
-      <cursorShape>PointingHandCursor</cursorShape>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
-     </property>
-     <property name="text">
-      <string>Supprimer</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButtonEffacer">
-     <property name="geometry">
-      <rect>
-       <x>700</x>
-       <y>580</y>
-       <width>161</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="cursor">
-      <cursorShape>PointingHandCursor</cursorShape>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
-     </property>
-     <property name="text">
-      <string>Effacer</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButtonExit">
-     <property name="geometry">
-      <rect>
-       <x>870</x>
-       <y>580</y>
-       <width>161</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="cursor">
-      <cursorShape>PointingHandCursor</cursorShape>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
-     </property>
-     <property name="text">
-      <string>Exit</string>
-     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QPushButton" name="pushButtonLister">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
+        </property>
+        <property name="text">
+         <string>Lister</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonSupprimer">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
+        </property>
+        <property name="text">
+         <string>Supprimer</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonEffacer">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
+        </property>
+        <property name="text">
+         <string>Effacer</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonExit">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:0, stop:0 rgba(137, 146, 178, 255), stop:1 rgba(255, 255, 255, 255));</string>
+        </property>
+        <property name="text">
+         <string>Exit</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </widget>
   </widget>
@@ -464,13 +484,15 @@ color: rgb(49, 49, 49);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1072</width>
+     <width>1265</width>
      <height>26</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="Ressources.qrc"/>
+ </resources>
  <connections/>
 </ui>
