--- a/uiadministrateur.ui
+++ b/uiadministrateur.ui
@@ -161,9 +161,7 @@ border-color: rgb(112, 132, 162);</string>
      </property>
      <property name="styleSheet">
       <string notr="true">border-radius: 5px;
-background-color: rgba(255, 255, 255, .0);
-border: 2px solid rgb(49, 49, 49);
-color: rgb(49, 49, 49);</string>
+border: 2px solid rgb(49, 49, 49);</string>
      </property>
      <property name="title">
       <string>Compte Utilisateur</string>
